--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
               <div ><p>X</p></div> 
              <div ><p>-</p></div>
-              <div ><p>+</p></div>
+              <div class="sum"><p>+</p></div>
              <div class="equal"><p>=</p></div>
         </div>
         
