Clean, add basic operations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="calc">
         <div class="display">
             <p id="result">0</p>
-            <p id="history">rresults</p>
+            <p id="history">result</p>
         </div>
         <div class="calcBody">
             <div class="left">
@@ -37,7 +37,7 @@
               <button class="operation" value="*"><p>X</p></button> 
               <button class="operation" value="-"><p>-</p></button>
               <button class="sum operation" value="+"><p>+</p></button>
-              <button class="equal operation"><p>=</p></button>
+              <button class="equal operation" value="="><p>=</p></button>
         </div>
         
             </div>
