--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="calc">
         <div class="display">
             <p id="result">0</p>
-            <p id="history">result</p>
+            <p id="history">_</p>
         </div>
         <div class="calcBody">
             <div class="left">
@@ -31,7 +31,7 @@
                 <button  class="number" value=2><p>2</p></button>
                 <button  class="number" value=3><p>3</p></button>
                 <button  class="zero number" value=0><p>0</p></button>
-                <button  class="number" value=0><p>.</p></button>
+                <button  class="number" value=0.><p>.</p></button>
             </div>
          <div class="right"> 
               <button class="operation" value="*"><p>X</p></button> 
