--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
         </div>
         <div class="calcBody">
             <div class="left">
-                <button class="ac"><p>AC</p></button>
-                <button class="operation" value ="/"><p>/</p></button>
-                <button  class="number" value=7><p>7</p></button>
-                <button  class="number" value=8><p>8</p></button>
-                <button  class="number" value=9><p>9</p></button>
-                <button  class="number" value=4><p>4</p></button>
-                <button  class="number" value=5><p>5</p></button>
-                <button  class="number" value=6><p>6</p></button>
-                <button  class="number" value=1><p>1</p></button>
-                <button  class="number" value=2><p>2</p></button>
-                <button  class="number" value=3><p>3</p></button>
-                <button  class="zero number" value=0><p>0</p></button>
-                <button  class="number" value=0.><p>.</p></button>
+                <button class="ac">AC</button>
+                <button class="operation" value ="/">/</button>
+                <button  class="number" value=7>7</button>
+                <button  class="number" value=8>8</button>
+                <button  class="number" value=9>9</button>
+                <button  class="number" value=4>4</button>
+                <button  class="number" value=5>5</button>
+                <button  class="number" value=6>6</button>
+                <button  class="number" value=1>1</button>
+                <button  class="number" value=2>2</button>
+                <button  class="number" value=3>3</button>
+                <button  class="zero number" value=0>0</button>
+                <button  class="number" value=0.>.</button>
             </div>
          <div class="right"> 
-              <button class="operation" value="*"><p>X</p></button> 
-              <button class="operation" value="-"><p>-</p></button>
-              <button class="sum operation" value="+"><p>+</p></button>
-              <button class="equal operation" value="="><p>=</p></button>
+              <button class="operation" value="*">X</button> 
+              <button class="operation" value="-">-</button>
+              <button class="sum operation" value="+">+</button>
+              <button class="equal operation" value="=">=</button>
         </div>
         
             </div>
