--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <main class="container">
-    
+  
     <div class="calc">
+          <p> JAVASCRIPT CALCULATOR</p>
         <div class="display">
             <p id="result">0</p>
             <p id="history">_</p>
@@ -31,7 +32,7 @@
                 <button  class="number" value=2>2</button>
                 <button  class="number" value=3>3</button>
                 <button  class="zero number" value=0>0</button>
-                <button  class="number" value=0.>.</button>
+                <button  class="number" value=.>.</button>
             </div>
          <div class="right"> 
               <button class="operation" value="*">X</button> 
